--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
   <modules>
     <module>order-service</module>
     <module>product-service</module>
+    <module>inventory-service</module>
+
+
   </modules>
 
   <build>
