user and product service changes

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=ecom_user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
