--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=inventory-service
-server.port=8082
+server.port=8083
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ecommerce
 spring.datasource.username=ecom_user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
