--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -60,6 +60,11 @@
             <version>3.2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
