--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -6,3 +6,16 @@ spring.datasource.username=userserviceuser
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 logging.level.org.springframework=TRACE
+logging.level.org.springframework.security=trace
+#spring.security.user.name=user
+#spring.security.user.password=$2a$12$/nh.pr4YJ/ofHWh3on70NeHPSvbBHBLqmnWcHT4hRuvnyVW2lXZ36
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-id=oidc-client
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-secret={noop}secret
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-authentication-methods[0]=client_secret_basic
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types[0]=authorization_code
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types[1]=refresh_token
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.redirect-uris[0]=http://127.0.0.1:8080/login/oauth2/code/oidc-client
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.post-logout-redirect-uris[0]=http://127.0.0.1:8080/
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.scopes[0]=openid
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.scopes[1]=profile
+#spring.security.oauth2.authorizationserver.client.oidc-client.registration.require-authorization-consent=true
