--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -5,8 +5,11 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/userservice
 spring.datasource.username=userserviceuser
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-logging.level.org.springframework=TRACE
-logging.level.org.springframework.security=trace
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
+spring.jpa.show-sql:true
+
 #spring.security.user.name=user
 #spring.security.user.password=$2a$12$/nh.pr4YJ/ofHWh3on70NeHPSvbBHBLqmnWcHT4hRuvnyVW2lXZ36
 #spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-id=oidc-client
